Bug 60542 - Color of menu items does not update to match personas
Summary: Color of menu items does not update to match personas
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: All All
: medium minor
Assignee: Cao Cuong Ngo
URL:
Whiteboard: target:4.1.0
Keywords: difficultyBeginner, easyHack, skillCpp
: 61206 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-02-09 14:08 UTC by Heine Pedersen
Modified: 2015-12-15 16:21 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of bug (316.71 KB, image/png)
2013-02-09 14:08 UTC, Heine Pedersen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Heine Pedersen 2013-02-09 14:08:22 UTC
Created attachment 74484 [details]
Screenshot of bug

Personas:

When applying a persona with a dark color, the menu items stays black.

When applying the same persona to firefox the menu items change to white/light gray.
Comment 1 Heine Pedersen 2013-02-09 14:10:29 UTC
I have just checked this on an Ubuntu 12.04 installation, and the bug is NOT present there, so it seems to be a problem specific to my RHEL installation.
Comment 2 Thomas Arnhold 2013-02-11 08:06:56 UTC
Kendy, I'm assigning this to you.
Comment 3 Philippe de LA RUFFIE 2013-02-15 09:32:32 UTC
I've the same problem on my computer (Windows Seven SP1, LibreOffice V4)

On Firefox, when I want to install my own persona, Firefox give me the possibility to choose the menu font color, and to choose white when my 
persona is dark.
Comment 4 k-j 2013-02-21 06:45:36 UTC
*** Bug 61206 has been marked as a duplicate of this bug. ***
Comment 5 Andy 2013-03-05 13:08:52 UTC
I can confirm this. 
Using win7 and 4.0.1.2, all dark hue personas are not usable, because menu titles will stay black and will not be seen anymore.
And a huge part of personas have a dark or darkish background.
Comment 6 Florian Reisinger 2013-03-07 10:41:04 UTC
It has been confirmed on Windows too (Windows 7 x64 SP 1 LibO 4.0)
Comment 7 Thomas Thym 2013-03-07 13:16:50 UTC
I can confirm this bug as well with LO 4.0.0.3 on Windows XP (32-bit) and LO 4.0.1.2 on openSUSE 12.2 (openSUSE-version with KDE extension).
Comment 8 Jan Holesovsky 2013-03-08 12:49:36 UTC
This is actually an easy hack; whoever wants to work on this has to update

static void setupPersonaHeaderFooter()

in vcl/source/app/settings.cxx to update MenuBarTextColor too.  The color is available in aPersonaSettings as the next token after the footer bitmap.

So you want to add something like (pseudo code)

         if ( nIndex > 0 )
             aFooter = aPersonaSettings.getToken( 0, ';', nIndex );
+        if ( nIndex > 0 )
+            aColor = aPersonaSettings.getToken( 0, ';', nIndex );
+        maMenuBarTextColor = Color( aColor.toInt64( 16 ) );

The "Color( aColor.toInt64( 16 ) )" will probably need some tweaking to get right - the color is stored as "#RRGGBB", so you first want to strip the leading "#"; the rest should be fine by toInt64(), but check the Color() constructor in tools/inc/tools/color.hxx to be sure.

Please let me know should you have any more questions :-)
Comment 9 Prashant 2013-03-30 07:21:32 UTC
Hi,

I wish to pick up this one but can't follow steps to reproduce it on my ubuntu 12.10 machine. May you please guide me with the same. 

Thanks,
Prashant Pandey
Comment 10 Cao Cuong Ngo 2013-03-30 18:37:37 UTC
I've made a patch for this bug

https://gerrit.libreoffice.org/#/c/3127/
Comment 11 Commit Notification 2013-04-04 11:31:35 UTC
Cao Cuong Ngo committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=84e99bd79ab4fef7e91bd302d1426cf1b3653b7f

fdo#60542 Persona setting: change color of the text menu.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Jan Holesovsky 2013-04-04 11:33:06 UTC
Marking as fixed - thank you so much for the patch!
Comment 13 Robinson Tryon (qubit) 2015-12-15 16:21:52 UTC
Migrating Whiteboard tags to Keywords: (EasyHack,DifficultyBeginner,SkillCpp )
[NinjaEdit]