fdo#60542 Persona setting: change color of the text menu.

Change-Id: I1d0ed94d41b3b8bcf0504e1528f4f505f817ad86
Reviewed-on: https://gerrit.libreoffice.org/3127
Reviewed-by: Jan Holesovsky <kendy@suse.cz>
Tested-by: Jan Holesovsky <kendy@suse.cz>